# Qwen3-RailroadEngineer1959-RL

./: .env.template  .gitattributes  .gitignore  AUTO_PUSH_SPACE.md  BLACKFOOT_EXTRACTION_RESULTS.md  CHAT_FORMAT_EXPLANATION.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAKOTA_EXTRACTION_RESULTS.md  DAKOTA_EXTRACTION_STATUS.md  DATA_LICENSE.md  ENHANCED_SYNTHETIC_QA_PLAN.md  ETHICS.md  EVALUATION.md  EXACT_LAUNCH_COMMANDS.md  EXTRACTION_MONITORING.md  EXTRACTION_STATUS.md  GPU_REQUIREMENTS.md  GRAMMAR_RL_PIPELINE.md  HF_INFERENCE_README.md  HOW_TO_LAUNCH_TRAINING.md  INSTRUCTIONS_RL_GRAMMAR_GYM.md  MODEL_CARD.md  PIPELINE_BRIEFING.md  PRIMEINTELLECT_INTEGRATION_COMPLETE.md  PRIMEINTELLECT_LAUNCH_GUIDE.md  PROGRESS.md  QUICK_START_DAKOTA.md  README.md  RL_GRAMMAR_GYM_OVERVIEW.md  RUSH_SETUP.sh  SETUP_CLAUDE_EXTRACTION.md  SPACE_FIX_EXPLANATION.md  START_HERE.md  TRAIN_DIFFERENT_MODEL.md  WANDB_ANALYSIS_SUMMARY.md  WHAT_IS_AN_ENVIRONMENT.md  benchmark_results.jsonl  (+55 more)
.claude/: settings.local.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  documentation.yml  pr-auto-tests.yml  publish-release.yml
Dictionary/grammardictionar00riggrich_jp2/: grammardictionar00riggrich_0001.jp2  grammardictionar00riggrich_0002.jp2  (+438 more)
OpenAIFineTune/: dakota_train.jsonl  dakota_valid.jsonl
RailroadEngineer1959/: PIPELINE_README.md  TODO.md
blackfeet_extraction/: COMPLETE_GUIDE.md  README.md  run_extraction.py
dakota-grammar-env/: pyproject.toml
dakota_extraction/: COMPLETE_GUIDE.md  README.md  run_extraction.py
dakota_rl_training/: AFTER_PROVISIONING.md  ALTERNATIVE_CLI_METHOD.md  CHECK_ORCHESTRATOR_LOG.md  CONNECT_NOW.md  CORRECT_LAUNCH.md  DEBUG_CONFIGS.md  DEBUG_ORCHESTRATOR.md  DEBUG_ORCHESTRATOR_FAILURE.md  EXACT_STEP_BY_STEP_LAUNCH.md  FIND_AND_RUN_VISUALIZATIONS.md  FIXED_CONFIGS.md  FIX_INSTALL_INTO_PRIME_RL_VENV.md  FIX_INSTALL_TORCH_FIRST.md  FIX_PRIME_EVALS.md  FIX_SYNC_ISSUES.md  FIX_WANDB_SYNC.md  GET_IN_WITHOUT_PASSWORD.md  INSTANCE_69.19.136.157.md  LAMBDA_HYPERBOLIC_SETUP.md  LAUNCH_1000_STEPS.md  LAUNCH_COMMAND_LEDGER.md  LAUNCH_PRIME_RL.md  LAUNCH_WITH_LEDGER.md  MINIMAL_TEST_CONFIGS.md  NEW_INSTANCE_SETUP_PLAN.md  ORCHESTRATOR_FAILED.md  POST_TRAINING_PLAN.md  QUICK_COPY_PASTE.md  QUICK_START_PRIME_RL.md  README.md  README_visualization.md  REAL_LAUNCH_METHOD.md  RUN_VISUALIZATIONS_COMMANDS.md  RUN_VISUALIZATIONS_NOW.md  SIMPLE_LAUNCH.md  SSH_AND_VENV.md  SSH_CONNECT_INSTANCE.md  SSH_KEY_DOWNLOAD_CLARIFICATION.md  SSH_KEY_INFO.md  SYNC_AND_CLEANUP.md  (+16 more)
data/: bilingual_training_set.jsonl
docs/: AUTO_PUSH_SPACE.md  DEBUGGING_INFERENCE.md  GPU_REQUIREMENTS.md  HF_INFERENCE_README.md  HUGGINGFACE_UPLOAD_GUIDE.md  INFERENCE_API_NOT_AVAILABLE.md  INFERENCE_DEPLOYMENT.md  PATENT_ARGUMENT_CANADA.md  README.md  REPO_ORGANIZATION.md  SPACE_DEBUG_GUIDE.md  SPACE_DEBUT_GUIDE.md  SPACE_FIX_EXPLANATION.md  WANDB_ANALYSIS_SUMMARY.md  WANDB_DATA_GUIDE.md  WANDB_REPORT_STRUCTURE.md  WANDB_TRAINING_RESULTS_ANALYSIS.md  WHERE_TO_FIND_DEBUG_OUTPUT.md  dakota_pipeline_blueprint.md  diagram.tex  instructions.txt  render_tikz.py
e2b/: README.md  e2b_connector.py  main.py
environments/dakota_grammar_translation/: .env-metadata.json  README.md  pyproject.toml
environments/dakota_grammar_translation/dakota1890/: __init__.py
environments/dakota_grammar_translation/dakota_grammar_translation/: __init__.py  environment.py
environments/dakota_grammar_translation/dakota_grammar_translation/configs/: orch_30b.toml  train_30b.toml
eval/: README.md  __init__.py  report.md  run_eval.py  score_extraction.py
huggingface_space/: DEPLOYMENT.md  PUSH_INSTRUCTIONS.md  README.md  app.py  requirements.txt
implementation/: inference_connector.py
scripts/: analyze_wandb_run.py  check_endpoint_options.py  create_rl_visualizations.py  create_tinker_visualizations.py  debug_inference.sh  debug_tinker_sig.py  deploy_dedicated_endpoint.py  diagnose_checkpoint_error.sh  export_ledger_now.py  extract_env_keys.ps1  get_env_exports.ps1  monitor_training.py  push_space.py  restart_training.sh  sample_endpoint_from_dataset.py  setup_prime_cli.ps1  setup_remote_env.sh  visualize_wandb_run.py
tests/: test_claude_extraction.py  test_dakota.py  test_dakota_claude.py  test_dakota_extraction.py  test_grammar_extraction.py  test_inference.py  test_offline_eval.py  test_training_dataset_builder.py  test_verifier_integration.py
tmp_publish/: README.md  adapter_model.safetensors  tinker_metadata.json
tools/: fix_markdown.py  update_progress.py
wandb_analysis/: comprehensive_analysis_summary.json  curriculum_timing.json  dakota_rl_metrics_summary.json  dakota_rl_wandb_export.json  dakota_rl_wandb_history.csv  example_generations.json  kl_divergence.json  kl_divergence_curve.csv  ledger_snippet_tinker.txt  loss_curves.csv  reward_curve_character.csv  reward_curve_morphology.csv  reward_curve_overall.csv  reward_ledger_tinker.csv  sample_efficiency.json
(+1625 files in other folders)
