[project]
name = "dakota1890"
description = "Verifiers-compatible environment for Dakota grammar and translation RL training (Dakota1890 project)."
version = "0.1.1"
requires-python = ">=3.10"
authors = [
    { name = "Dakota Language Lab", email = "language@dakota.example" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["dakota", "translation", "rl", "verifiers", "prime-intellect", "grammar"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "verifiers>=0.1.5.dev1",
    "datasets>=2.20.0",
]

[project.urls]
Repository = "https://github.com/HarleyCoops/Dakota1890"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dakota_grammar_translation", "dakota1890"]
include = [
    "dakota_grammar_translation/data/*.jsonl",
]

[tool.hatch.metadata]
allow-direct-references = true

