[project]
name = "dakota1890"
description = "Verifiers-compatible environment for Dakota grammar and translation RL training (Dakota1890 project)."
version = "0.1.17"
requires-python = ">=3.10"
authors = [
    { name = "Christian H. Cooper", email = "christian@dakota.notyet" },
]
dependencies = [
    "verifiers>=0.1.7.post0",
    "datasets>=2.18",
]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["dakota", "translation", "rl", "verifiers", "prime-intellect", "grammar"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.urls]
Repository = "https://github.com/HarleyCoops/Dakota1890"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dakota_grammar_translation", "dakota1890"]
include = [
    "dakota_grammar_translation/data/*.jsonl",
    "dakota_grammar_translation/configs/*.toml",
]

[tool.hatch.metadata]
allow-direct-references = true
